--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -2,8 +2,8 @@
 <% if @list.errors.any? %>
   <%= @list.errors.count %>件のエラーが発生しました
   <ul>
-    <%= @list.errors.full_messages.each do |message| %>
-      <li><% message %></li>
+    <% @list.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
     <% end %>
   </ul>
 <% end %>
